# rf_detr_trt_backend

./: .gitignore  CMakeLists.txt  ReadMe.md  package.xml
cmake/: Config.cmake  ModelGeneration.cmake  TestingSetup.cmake
include/rf_detr_trt_backend/: detection_utils.hpp  rf_detr_trt_backend.hpp
script/: convert_onnx_to_fp16.py  export_rfdetr_to_onnx.py
src/: detection_utils.cpp  rf_detr_trt_backend.cpp
src/internal/: cuda_check.hpp  cuda_raii.hpp  postprocess.cpp  postprocess.hpp  preprocess_kernel.cu  preprocess_kernel.cuh  rf_detr_trt_backend_impl.cpp  rf_detr_trt_backend_impl.hpp  trt_logger.hpp
test/: test_rf_detr_trt_backend.cpp
